--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
-  margin: 0;
+  margin: 60px;
+  margin-bottom: 80px;
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +12,10 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+  margin-right: 30px;
 }
